--- a/res/src/ng-modules/chayka-modals.less
+++ b/res/src/ng-modules/chayka-modals.less
@@ -1,6 +1,6 @@
 //@import '/wp-content/plugins/wpp-ZF-Core/res/css/styles.less';
 
-#chayka-modals{
+.chayka-modals{
     text-align: center;
     display: table;
     position: fixed;
