--- a/app/views/chayka-spinners.phtml
+++ b/app/views/chayka-spinners.phtml
@@ -1,3 +1,14 @@
+<div id="chayka-spinners">
+    <div data-general-spinner></div>
+</div>
+<script>
+    (function($, angular){
+        $(document).ready(function(){
+            angular.bootstrap(document.getElementById('chayka-spinners'), ['chayka-spinners'])
+        });
+    }(window.jQuery, window.angular));
+</script>
+
 <?php
 /**
  * Created by PhpStorm.
