--- a/res/src/ng-modules/chayka-modals.less
+++ b/res/src/ng-modules/chayka-modals.less
@@ -48,6 +48,7 @@
                     font-size: 20px;
                     text-align: center;
                     cursor: pointer;
+                    font-family: Arial;
                 }
             }
             & > .modal_body{
