--- a/res/src/ng-modules/chayka-spinners.less
+++ b/res/src/ng-modules/chayka-spinners.less
@@ -4,9 +4,7 @@
 
 .chayka-spinner{
     padding: 0 0 0 (@img-width + 5px);
-    background-repeat: no-repeat;
-    background-position: 0 0;
-    background-image: url('../img/spinner32x32.gif');
+    background: url('../img/spinner32x32.gif') no-repeat 0 0;
     background-size: @img-width @img-height;
     min-height: @img-height;
     line-height: @img-height;
