--- a/res/src/ng-modules/chayka-modals.less
+++ b/res/src/ng-modules/chayka-modals.less
@@ -1,11 +1,10 @@
 //@import '/wp-content/plugins/wpp-ZF-Core/res/css/styles.less';
+@import '../../lib/lesshat/build/lesshat';
 
 .chayka-modals{
     text-align: center;
-    display: table;
+//    display: table;
     position: fixed;
-    overflow-x: auto;
-    overflow-y: scroll;
     background-color: rgba(0,0,0, .1);
     top: 0;
     left: 0;
@@ -13,20 +12,24 @@
     bottom: 0;
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    box-sizing: border-box;
     z-index: 10000;
 
     & > .chayka-modals-fader{
-        display: table-cell;
+//        display: table-cell;
         vertical-align: middle;
 
         & > .chayka-modals-modal{
             position: relative;
-            top: 0;
             background-color: white;
             display: inline-block;
             min-width: 300px;
-            margin: 0 auto;
+            max-width: 100%;
+            margin: 50px auto;
             border: 1px solid gray;
+            .box-sizing(border-box);
 
             & > .modal_header{
                 position: relative;
