--- a/res/src/ng-modules/chayka-spinners.css
+++ b/res/src/ng-modules/chayka-spinners.css
@@ -1,8 +1,6 @@
 .chayka-spinner {
   padding: 0 0 0 29px;
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  background-image: url('../img/spinner32x32.gif');
+  background: url('../img/spinner32x32.gif') no-repeat 0 0;
   background-size: 24px 24px;
   min-height: 24px;
   line-height: 24px;
