--- a/res/src/ng-modules/chayka-modals.css
+++ b/res/src/ng-modules/chayka-modals.css
@@ -37,6 +37,7 @@
   margin-left: 40px;
   margin-right: 40px;
   line-height: 30px;
+  text-align: center;
 }
 .chayka-modals > .chayka-modals-fader > .chayka-modals-modal > .modal_header > .modal_header-close {
   display: inline-block;
