--- a/app/views/chayka-modals.phtml
+++ b/app/views/chayka-modals.phtml
@@ -10,7 +10,7 @@
 <!--                <div class="modal_body-element" data-ng-show="!!item.element" data-modal-element="item.element"></div>-->
             </div>
             <div class="modal_buttons" data-ng-show="item.buttons && item.buttons.length">
-                <button data-ng-repeat="button in item.buttons" data-ng-click="button.callback && button.callback(); item.hide();">{{button.text}}</button>
+                <button data-ng-repeat="button in item.buttons" data-ng-click="item.hide(); button.click && button.click();">{{button.text}}</button>
             </div>
         </div>
     </div>
@@ -27,7 +27,7 @@
                 <div class="modal_body" data-ng-transclude>
                 </div>
                 <div class="modal_buttons" data-ng-show="modal.buttons && modal.buttons.length">
-                    <button data-ng-repeat="button in item.buttons" data-ng-click="hide(); button.callback && button.callback();">{{button.text}}</button>
+                    <button data-ng-repeat="button in item.buttons" data-ng-click="hide(); button.click && button.click();">{{button.text}}</button>
                 </div>
             </div>
         </div>
