--- a/res/src/ng-modules/chayka-modals.less
+++ b/res/src/ng-modules/chayka-modals.less
@@ -39,6 +39,7 @@
                     margin-left: 40px;
                     margin-right: 40px;
                     line-height: 30px;
+                    text-align: center;
                 }
                 & > .modal_header-close{
                     display: inline-block;
