--- a/res/src/ng-modules/chayka-forms.less
+++ b/res/src/ng-modules/chayka-forms.less
@@ -246,6 +246,8 @@
         width: 100%;
         position: static;
         float: none;
+//        line-height: normal;
+//        min-height: 0;
     }
     .input{
         margin: 0;
