--- a/res/src/ng-modules/chayka-modals.less
+++ b/res/src/ng-modules/chayka-modals.less
@@ -60,7 +60,7 @@
                 text-align: left;
 
                 & > .modal_body-content{
-
+                    white-space: pre-line;
                 }
                 & > .modal_body-element{
 
