--- a/res/src/ng-modules/chayka-modals.less
+++ b/res/src/ng-modules/chayka-modals.less
@@ -5,6 +5,7 @@
     text-align: center;
 //    display: table;
     position: fixed;
+    background-color: rgb(0,0,0);
     background-color: rgba(0,0,0, .1);
     top: 0;
     left: 0;
