--- a/app/views/admin/index.phtml
+++ b/app/views/admin/index.phtml
@@ -16,6 +16,7 @@
             <div class="form_field stretch" data-form-field="MinimizeMedia">
                 <label class="width50">Minimize Media</label><select data-ng-init="options.MinimizeMedia='0'; minOptions = {'0': 'No', '1': 'Yes'}" data-ng-options="key as value for (key, value) in minOptions" data-ng-model="options.MinimizeMedia" title="Minimize Media"></select>
             </div>
+	        <!-- chayka: fields -->
             <div class="buttons">
                 <button class="button button-primary button-large" data-ng-click="saveOptions();">Save</button>
             </div>
