Optimized static a bit

--- a/app/views/chayka-modals.phtml
+++ b/app/views/chayka-modals.phtml
@@ -34,9 +34,9 @@
     </div>
 </script>
 <script>
-    (function($, angular){
+    (function($){
         $(document).ready(function(){
-            angular.bootstrap(document.getElementById('chayka-modals'), ['chayka-modals'])
+            window.angular.bootstrap(document.getElementById('chayka-modals'), ['chayka-modals'])
         });
-    }(window.jQuery, window.angular));
+    }(window.jQuery));
 </script>
