--- a/app/views/chayka-spinners.phtml
+++ b/app/views/chayka-spinners.phtml
@@ -2,11 +2,11 @@
     <div data-general-spinner></div>
 </div>
 <script>
-    (function($, angular){
+    (function($){
         $(document).ready(function(){
-            angular.bootstrap(document.getElementById('chayka-spinners'), ['chayka-spinners'])
+            window.angular.bootstrap(document.getElementById('chayka-spinners'), ['chayka-spinners'])
         });
-    }(window.jQuery, window.angular));
+    }(window.jQuery));
 </script>
 
 <?php
