--- a/app/views/chayka-spinners.phtml
+++ b/app/views/chayka-spinners.phtml
@@ -2,17 +2,9 @@
     <div data-general-spinner></div>
 </div>
 <script>
-    (function($){
-        $(document).ready(function(){
-            window.angular.bootstrap(document.getElementById('chayka-spinners'), ['chayka-spinners'])
-        });
-    }(window.jQuery));
+//    (function($){
+//        $(document).ready(function(){
+//            window.angular.bootstrap(document.getElementById('chayka-spinners'), ['chayka-spinners'])
+//        });
+//    }(window.jQuery));
 </script>
-
-<?php
-/**
- * Created by PhpStorm.
- * User: borismossounov
- * Date: 31.10.14
- * Time: 13:10
- */ 
