--- a/app/views/chayka-modals.phtml
+++ b/app/views/chayka-modals.phtml
@@ -34,9 +34,9 @@
     </div>
 </script>
 <script>
-    (function($){
-        $(document).ready(function(){
-            window.angular.bootstrap(document.getElementById('chayka-modals'), ['chayka-modals'])
-        });
-    }(window.jQuery));
+//    (function($){
+//        $(document).ready(function(){
+//            window.angular.bootstrap(document.getElementById('chayka-modals'), ['chayka-modals'])
+//        });
+//    }(window.jQuery));
 </script>
