--- a/app/views/chayka-pagination.phtml
+++ b/app/views/chayka-pagination.phtml
@@ -13,7 +13,7 @@ Chayka\WP\Helpers\ResourceHelper::enqueueStyle('chayka-pagination');
 
 ?>
 <div class="<?php echo $this->cssClass?> chayka-pagination"
-    <?php if($this->js): Chayka\WP\Helpers\ResourceHelper::enqueueScript('chayka-pagination'); ?>
+    <?php if($this->js): Chayka\WP\Helpers\AngularHelper::enqueueScript('chayka-pagination'); ?>
         data-pagination="<?php echo $this->js;?>"
         data-current-page="<?php echo $this->model->getCurrentPage();?>"
         data-total-pages="<?php echo $this->model->getTotalPages();?>"
