--- a/app/views/chayka-modals.phtml
+++ b/app/views/chayka-modals.phtml
@@ -10,7 +10,7 @@
 <!--                <div class="modal_body-element" data-ng-show="!!item.element" data-modal-element="item.element"></div>-->
             </div>
             <div class="modal_buttons" data-ng-show="item.buttons && item.buttons.length">
-                <button data-ng-repeat="button in item.buttons" data-ng-click="item.hide(); button.click && button.click();" class="{{getButtonClass()}}">{{button.text}}</button>
+                <button data-ng-repeat="button in item.buttons" data-ng-click="item.hide(); button.click && button.click();" class="{{getButtonClass(button)}}">{{button.text | translate}}</button>
             </div>
         </div>
     </div>
@@ -26,8 +26,8 @@
                 </div>
                 <div class="modal_body" data-ng-transclude>
                 </div>
-                <div class="modal_buttons" data-ng-show="modal.buttons && modal.buttons.length">
-                    <button data-ng-repeat="button in item.buttons" data-ng-click="hide(); button.click && button.click();" class="{{getButtonClass()}}">{{button.text}}</button>
+                <div class="modal_buttons" data-ng-show="buttons && buttons.length">
+                    <button data-ng-repeat="button in buttons" data-ng-click="hide(); button.click && button.click();" class="{{getButtonClass(button)}}">{{button.text | translate}}</button>
                 </div>
             </div>
         </div>
